# python-learning

./: 01_learn.py
Assignment/: 02_learn.py  03_learn.py  04_learn.py  05_learn.py  06_learn.py  07_learn.py
FastAPI/: books.py  books2.py
FastAPI/fastapienv/: pyvenv.cfg
fastapi-uv/: books2.py  pyproject.toml
todoapp/: .dockerignore  Dockerfile  database.py  deploy.sh  docker-compose.yml  main.py  models.py  pyproject.toml  todoapp.db  todoapp2.db
todoapp/routers/: admin.py  auth.py  todos.py  user.py
todoapp/test/: test_example.py  test_main.py
